--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,20 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
+    implementation "com.squareup.retrofit2:converter-moshi:2.7.2"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.3.1'
+
     final daggerVersion = "2.26"
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
+
+    testImplementation 'com.google.truth:truth:1.0.1'
 }
