--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
 
     testImplementation 'com.google.truth:truth:1.0.1'
+
+    testImplementation "io.mockk:mockk:1.10.0"
 }
