--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,9 @@ dependencies {
 
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
 
-    testImplementation 'com.google.truth:truth:1.0.1'
+    final truthVersion = "1.0.1"
+    testImplementation "com.google.truth:truth:$truthVersion"
+    androidTestImplementation "com.google.truth:truth:$truthVersion"
 
     testImplementation "io.mockk:mockk:1.10.0"
 }
