--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.3.1'
 
-    final daggerVersion = "2.26"
+    final daggerVersion = "2.28.2"
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
@@ -74,4 +74,7 @@ dependencies {
     androidTestImplementation "com.google.truth:truth:$truthVersion"
 
     testImplementation "io.mockk:mockk:1.10.0"
+
+    final paging_version = "3.0.0-alpha04"
+    implementation "androidx.paging:paging-runtime:$paging_version"
 }
